<resources>
    <string name="app_name">Pokédex</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="supp_actbar_title">Pokédex</string>
    <string name="pokemon_image">Pokemon image</string>
    <string name="type">Tipo:</string>
    <string name="pokemonType">PokemonType</string>
    <string name="height">Altura:</string>
    <string name="weight">Peso:</string>
    <string name="button_generate_random_pokemon">button generate random pokemon</string>
    <string name="pokedex_logo">pokedex logo</string>

</resources>